src/test/ui/issues/issue-39559.stderr
error[E0747]: type parameters cannot appear within an array length expression
  --> $DIR/issue-39559.rs:14:18
   |
LL |     entries: [T; D::dim()],
   |                  ^^^^^^ type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
